components/content.module.scss
$main-content-colour: black;
$monospace-content-colour: midnightblue;
$mouseover-content-colour: darkslateblue;

.content {
    &-page-heading {
        color: $main-content-colour;
    };
    &-content-heading {
        color: $main-content-colour;
    };
    &-section-heading {
        color: $main-content-colour;
    };
    &-subsection-heading {
        color: $main-content-colour;
    };
    &-text {
        &-content {
            color: $main-content-colour;
        };
        &-link {
            color: $monospace-content-colour;
            text-decoration: none;
            &:hover {
                color: $mouseover-content-colour;
            };
        };
        &-wrapper {
            white-space: pre-line;
            width: auto;
        };
    };
    &-image {
        &-wrapper {
            width: auto;
            overflow: scroll;
        }
    }
    &-list {
        &-item {
            color: $main-content-colour;
        }
    };
    &-code {
        &-container {
            overflow: scroll;
        };
        &-text {
            color: $monospace-content-colour;
        }
    };
    &-math {
        &-text {
            color: $main-content-colour;
        };
    };
    &-table {
        &-wrapper {
            width: auto;
            overflow: scroll;
        };
        &-container {
            border-collapse: collapse;
            border: none;
        };
        &-cell {
            color: $main-content-colour;
            border: 1px solid $main-content-colour;
        };
    };
};

